# ai-devflow-demo

./: .gitignore  README.md  pyproject.toml
.cursor/skills/github-issue-to-md/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: ci.yml
scripts/: new-feature.sh
src/uartlog/: cli.py  parser.py
tests/: test_cli.py  test_parser.py
