[project]
name = "ai-devflow-demo"
version = "0.1.0"
description = "Demo project for AI-assisted GitHub PR workflow"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]

[project.scripts]
uartlog = "uartlog.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
